@@ -25,6 +25,8 @@ def register():
         EndorsementOptionField,
         EndorsementActivationHistory,
         EndorsementActivationHistoryField,
+        EndorsementContact,
+        EndorsementContactField,
         EndorsementExtraData,
         EndorsementExtraDataField,
         SelectEndorsement,
@@ -33,6 +35,7 @@ def register():
         ChangeContractExtraData,
         TerminateContract,
         VoidContract,
+        ChangeContractSubscriber,
         BasicPreview,
         EndorsementSelectDeclineReason,
         ReportTemplate,
