@@ -1,3 +1,4 @@
+* Add contract subscriber change endorsement
 * The relation field is set to new record on applied endorsements adding a new record, and removed on cancellation
 * Endorsement Step defines if the Endorsement Part can handle several instances.
 
